server/compilers/goLiteJS/src/test/ml2/valid/predecl6.go
// shadowing pre-declared mappings
package main

type int float64
type rune string
