server/compilers/goLiteJS/src/test/ml2/invalid/decl6.go
// variable declared twice, different type
package main

var a int
var a float64
